eduScript/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_def_list
Rule 2     function_def_list -> function_def_list function_def
Rule 3     function_def_list -> function_def
Rule 4     function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE
Rule 5     statement_list -> statement_list statement
Rule 6     statement_list -> <empty>
Rule 7     statement -> command_statement
Rule 8     statement -> if_statement
Rule 9     statement -> loop_statement
Rule 10    statement -> function_call
Rule 11    statement -> return_statement
Rule 12    command_statement -> ROBOT_COMMAND LPAREN arguments RPAREN SEMICOLON
Rule 13    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_clause
Rule 14    else_clause -> ELSE LBRACE statement_list RBRACE
Rule 15    else_clause -> <empty>
Rule 16    loop_statement -> REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 17    function_call -> IDENTIFIER LPAREN arguments RPAREN SEMICOLON
Rule 18    return_statement -> RETURN expression SEMICOLON
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression MULTIPLY expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> expression EQ expression
Rule 24    expression -> expression NEQ expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression GT expression
Rule 28    expression -> expression GE expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> NOT expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> IDENTIFIER
Rule 35    expression -> function_call_expr
Rule 36    function_call_expr -> IDENTIFIER LPAREN arguments RPAREN
Rule 37    arguments -> arguments COMMA expression
Rule 38    arguments -> expression
Rule 39    arguments -> <empty>
Rule 40    ROBOT_COMMAND -> MOVEFORWARD
Rule 41    ROBOT_COMMAND -> MOVEBACKWARD
Rule 42    ROBOT_COMMAND -> TURNRIGHT
Rule 43    ROBOT_COMMAND -> TURNLEFT
Rule 44    ROBOT_COMMAND -> PICKUPOBJECT
Rule 45    ROBOT_COMMAND -> DROPOBJECT

Terminals, with rules where they appear

AND                  : 29
COMMA                : 37
DIVIDE               : 22
DROPOBJECT           : 45
ELSE                 : 14
EQ                   : 23
FUNCTION             : 4
GE                   : 28
GT                   : 27
IDENTIFIER           : 4 17 34 36
IF                   : 13
LBRACE               : 4 13 14 16
LE                   : 26
LPAREN               : 4 12 13 16 17 32 36
LT                   : 25
MINUS                : 20
MOVEBACKWARD         : 41
MOVEFORWARD          : 40
MULTIPLY             : 21
NEQ                  : 24
NOT                  : 31
NUMBER               : 33
OR                   : 30
PICKUPOBJECT         : 44
PLUS                 : 19
RBRACE               : 4 13 14 16
REPEAT               : 16
RETURN               : 18
RPAREN               : 4 12 13 16 17 32 36
SEMICOLON            : 12 17 18
TURNLEFT             : 43
TURNRIGHT            : 42
error                : 

Nonterminals, with rules where they appear

ROBOT_COMMAND        : 12
arguments            : 12 17 36 37
command_statement    : 7
else_clause          : 13
expression           : 13 16 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 37 38
function_call        : 10
function_call_expr   : 35
function_def         : 2 3
function_def_list    : 1 2
if_statement         : 8
loop_statement       : 9
program              : 0
return_statement     : 11
statement            : 5
statement_list       : 4 5 13 14 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_def_list
    (2) function_def_list -> . function_def_list function_def
    (3) function_def_list -> . function_def
    (4) function_def -> . FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE

    FUNCTION        shift and go to state 4

    program                        shift and go to state 1
    function_def_list              shift and go to state 2
    function_def                   shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function_def_list .
    (2) function_def_list -> function_def_list . function_def
    (4) function_def -> . FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE

    $end            reduce using rule 1 (program -> function_def_list .)
    FUNCTION        shift and go to state 4

    function_def                   shift and go to state 5

state 3

    (3) function_def_list -> function_def .

    FUNCTION        reduce using rule 3 (function_def_list -> function_def .)
    $end            reduce using rule 3 (function_def_list -> function_def .)


state 4

    (4) function_def -> FUNCTION . IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE

    IDENTIFIER      shift and go to state 6


state 5

    (2) function_def_list -> function_def_list function_def .

    FUNCTION        reduce using rule 2 (function_def_list -> function_def_list function_def .)
    $end            reduce using rule 2 (function_def_list -> function_def_list function_def .)


state 6

    (4) function_def -> FUNCTION IDENTIFIER . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 7


state 7

    (4) function_def -> FUNCTION IDENTIFIER LPAREN . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 8


state 8

    (4) function_def -> FUNCTION IDENTIFIER LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 9


state 9

    (4) function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE . statement_list RBRACE
    (5) statement_list -> . statement_list statement
    (6) statement_list -> .

    RBRACE          reduce using rule 6 (statement_list -> .)
    IF              reduce using rule 6 (statement_list -> .)
    REPEAT          reduce using rule 6 (statement_list -> .)
    IDENTIFIER      reduce using rule 6 (statement_list -> .)
    RETURN          reduce using rule 6 (statement_list -> .)
    MOVEFORWARD     reduce using rule 6 (statement_list -> .)
    MOVEBACKWARD    reduce using rule 6 (statement_list -> .)
    TURNRIGHT       reduce using rule 6 (statement_list -> .)
    TURNLEFT        reduce using rule 6 (statement_list -> .)
    PICKUPOBJECT    reduce using rule 6 (statement_list -> .)
    DROPOBJECT      reduce using rule 6 (statement_list -> .)

    statement_list                 shift and go to state 10

state 10

    (4) function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list . RBRACE
    (5) statement_list -> statement_list . statement
    (7) statement -> . command_statement
    (8) statement -> . if_statement
    (9) statement -> . loop_statement
    (10) statement -> . function_call
    (11) statement -> . return_statement
    (12) command_statement -> . ROBOT_COMMAND LPAREN arguments RPAREN SEMICOLON
    (13) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_clause
    (16) loop_statement -> . REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
    (17) function_call -> . IDENTIFIER LPAREN arguments RPAREN SEMICOLON
    (18) return_statement -> . RETURN expression SEMICOLON
    (40) ROBOT_COMMAND -> . MOVEFORWARD
    (41) ROBOT_COMMAND -> . MOVEBACKWARD
    (42) ROBOT_COMMAND -> . TURNRIGHT
    (43) ROBOT_COMMAND -> . TURNLEFT
    (44) ROBOT_COMMAND -> . PICKUPOBJECT
    (45) ROBOT_COMMAND -> . DROPOBJECT

    RBRACE          shift and go to state 12
    IF              shift and go to state 20
    REPEAT          shift and go to state 21
    IDENTIFIER      shift and go to state 11
    RETURN          shift and go to state 22
    MOVEFORWARD     shift and go to state 23
    MOVEBACKWARD    shift and go to state 24
    TURNRIGHT       shift and go to state 25
    TURNLEFT        shift and go to state 26
    PICKUPOBJECT    shift and go to state 27
    DROPOBJECT      shift and go to state 28

    statement                      shift and go to state 13
    command_statement              shift and go to state 14
    if_statement                   shift and go to state 15
    loop_statement                 shift and go to state 16
    function_call                  shift and go to state 17
    return_statement               shift and go to state 18
    ROBOT_COMMAND                  shift and go to state 19

state 11

    (17) function_call -> IDENTIFIER . LPAREN arguments RPAREN SEMICOLON

    LPAREN          shift and go to state 29


state 12

    (4) function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE .

    FUNCTION        reduce using rule 4 (function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE .)
    $end            reduce using rule 4 (function_def -> FUNCTION IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE .)


state 13

    (5) statement_list -> statement_list statement .

    RBRACE          reduce using rule 5 (statement_list -> statement_list statement .)
    IF              reduce using rule 5 (statement_list -> statement_list statement .)
    REPEAT          reduce using rule 5 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 5 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 5 (statement_list -> statement_list statement .)
    MOVEFORWARD     reduce using rule 5 (statement_list -> statement_list statement .)
    MOVEBACKWARD    reduce using rule 5 (statement_list -> statement_list statement .)
    TURNRIGHT       reduce using rule 5 (statement_list -> statement_list statement .)
    TURNLEFT        reduce using rule 5 (statement_list -> statement_list statement .)
    PICKUPOBJECT    reduce using rule 5 (statement_list -> statement_list statement .)
    DROPOBJECT      reduce using rule 5 (statement_list -> statement_list statement .)


state 14

    (7) statement -> command_statement .

    RBRACE          reduce using rule 7 (statement -> command_statement .)
    IF              reduce using rule 7 (statement -> command_statement .)
    REPEAT          reduce using rule 7 (statement -> command_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> command_statement .)
    RETURN          reduce using rule 7 (statement -> command_statement .)
    MOVEFORWARD     reduce using rule 7 (statement -> command_statement .)
    MOVEBACKWARD    reduce using rule 7 (statement -> command_statement .)
    TURNRIGHT       reduce using rule 7 (statement -> command_statement .)
    TURNLEFT        reduce using rule 7 (statement -> command_statement .)
    PICKUPOBJECT    reduce using rule 7 (statement -> command_statement .)
    DROPOBJECT      reduce using rule 7 (statement -> command_statement .)


state 15

    (8) statement -> if_statement .

    RBRACE          reduce using rule 8 (statement -> if_statement .)
    IF              reduce using rule 8 (statement -> if_statement .)
    REPEAT          reduce using rule 8 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> if_statement .)
    RETURN          reduce using rule 8 (statement -> if_statement .)
    MOVEFORWARD     reduce using rule 8 (statement -> if_statement .)
    MOVEBACKWARD    reduce using rule 8 (statement -> if_statement .)
    TURNRIGHT       reduce using rule 8 (statement -> if_statement .)
    TURNLEFT        reduce using rule 8 (statement -> if_statement .)
    PICKUPOBJECT    reduce using rule 8 (statement -> if_statement .)
    DROPOBJECT      reduce using rule 8 (statement -> if_statement .)


state 16

    (9) statement -> loop_statement .

    RBRACE          reduce using rule 9 (statement -> loop_statement .)
    IF              reduce using rule 9 (statement -> loop_statement .)
    REPEAT          reduce using rule 9 (statement -> loop_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> loop_statement .)
    RETURN          reduce using rule 9 (statement -> loop_statement .)
    MOVEFORWARD     reduce using rule 9 (statement -> loop_statement .)
    MOVEBACKWARD    reduce using rule 9 (statement -> loop_statement .)
    TURNRIGHT       reduce using rule 9 (statement -> loop_statement .)
    TURNLEFT        reduce using rule 9 (statement -> loop_statement .)
    PICKUPOBJECT    reduce using rule 9 (statement -> loop_statement .)
    DROPOBJECT      reduce using rule 9 (statement -> loop_statement .)


state 17

    (10) statement -> function_call .

    RBRACE          reduce using rule 10 (statement -> function_call .)
    IF              reduce using rule 10 (statement -> function_call .)
    REPEAT          reduce using rule 10 (statement -> function_call .)
    IDENTIFIER      reduce using rule 10 (statement -> function_call .)
    RETURN          reduce using rule 10 (statement -> function_call .)
    MOVEFORWARD     reduce using rule 10 (statement -> function_call .)
    MOVEBACKWARD    reduce using rule 10 (statement -> function_call .)
    TURNRIGHT       reduce using rule 10 (statement -> function_call .)
    TURNLEFT        reduce using rule 10 (statement -> function_call .)
    PICKUPOBJECT    reduce using rule 10 (statement -> function_call .)
    DROPOBJECT      reduce using rule 10 (statement -> function_call .)


state 18

    (11) statement -> return_statement .

    RBRACE          reduce using rule 11 (statement -> return_statement .)
    IF              reduce using rule 11 (statement -> return_statement .)
    REPEAT          reduce using rule 11 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 11 (statement -> return_statement .)
    RETURN          reduce using rule 11 (statement -> return_statement .)
    MOVEFORWARD     reduce using rule 11 (statement -> return_statement .)
    MOVEBACKWARD    reduce using rule 11 (statement -> return_statement .)
    TURNRIGHT       reduce using rule 11 (statement -> return_statement .)
    TURNLEFT        reduce using rule 11 (statement -> return_statement .)
    PICKUPOBJECT    reduce using rule 11 (statement -> return_statement .)
    DROPOBJECT      reduce using rule 11 (statement -> return_statement .)


state 19

    (12) command_statement -> ROBOT_COMMAND . LPAREN arguments RPAREN SEMICOLON

    LPAREN          shift and go to state 30


state 20

    (13) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE else_clause

    LPAREN          shift and go to state 31


state 21

    (16) loop_statement -> REPEAT . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 32


state 22

    (18) return_statement -> RETURN . expression SEMICOLON
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 33
    function_call_expr             shift and go to state 38

state 23

    (40) ROBOT_COMMAND -> MOVEFORWARD .

    LPAREN          reduce using rule 40 (ROBOT_COMMAND -> MOVEFORWARD .)


state 24

    (41) ROBOT_COMMAND -> MOVEBACKWARD .

    LPAREN          reduce using rule 41 (ROBOT_COMMAND -> MOVEBACKWARD .)


state 25

    (42) ROBOT_COMMAND -> TURNRIGHT .

    LPAREN          reduce using rule 42 (ROBOT_COMMAND -> TURNRIGHT .)


state 26

    (43) ROBOT_COMMAND -> TURNLEFT .

    LPAREN          reduce using rule 43 (ROBOT_COMMAND -> TURNLEFT .)


state 27

    (44) ROBOT_COMMAND -> PICKUPOBJECT .

    LPAREN          reduce using rule 44 (ROBOT_COMMAND -> PICKUPOBJECT .)


state 28

    (45) ROBOT_COMMAND -> DROPOBJECT .

    LPAREN          reduce using rule 45 (ROBOT_COMMAND -> DROPOBJECT .)


state 29

    (17) function_call -> IDENTIFIER LPAREN . arguments RPAREN SEMICOLON
    (37) arguments -> . arguments COMMA expression
    (38) arguments -> . expression
    (39) arguments -> .
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    RPAREN          reduce using rule 39 (arguments -> .)
    COMMA           reduce using rule 39 (arguments -> .)
    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    arguments                      shift and go to state 39
    expression                     shift and go to state 40
    function_call_expr             shift and go to state 38

state 30

    (12) command_statement -> ROBOT_COMMAND LPAREN . arguments RPAREN SEMICOLON
    (37) arguments -> . arguments COMMA expression
    (38) arguments -> . expression
    (39) arguments -> .
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    RPAREN          reduce using rule 39 (arguments -> .)
    COMMA           reduce using rule 39 (arguments -> .)
    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    arguments                      shift and go to state 41
    expression                     shift and go to state 40
    function_call_expr             shift and go to state 38

state 31

    (13) if_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE else_clause
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 42
    function_call_expr             shift and go to state 38

state 32

    (16) loop_statement -> REPEAT LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 43
    function_call_expr             shift and go to state 38

state 33

    (18) return_statement -> RETURN expression . SEMICOLON
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . MULTIPLY expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . EQ expression
    (24) expression -> expression . NEQ expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GT expression
    (28) expression -> expression . GE expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression

    SEMICOLON       shift and go to state 44
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    MULTIPLY        shift and go to state 47
    DIVIDE          shift and go to state 48
    EQ              shift and go to state 49
    NEQ             shift and go to state 50
    LT              shift and go to state 51
    LE              shift and go to state 52
    GT              shift and go to state 53
    GE              shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56


state 34

    (31) expression -> NOT . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 57
    function_call_expr             shift and go to state 38

state 35

    (32) expression -> LPAREN . expression RPAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression MULTIPLY expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GT expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . function_call_expr
    (36) function_call_expr -> . IDENTIFIER LPAREN arguments RPAREN

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    IDENTIFIER      shift and go to state 37

    expression                     shift and go to state 58
    function_call_expr             shift and go to state 38

state 36

    (33) expression -> NUMBER .

    SEMICOLON       reduce using rule 33 (expression -> NUMBER .)
    PLUS            reduce using rule 33 (expression -> NUMBER .)
    MINUS           reduce using rule 33 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 33 (expression -> NUMBER .)
    DIVIDE          reduce using rule 33 (expression -> NUMBER .)
    EQ              reduce using rule 33 (expression -> NUMBER .)
    NEQ             reduce using rule 33 (expression -> NUMBER .)
    LT              reduce using rule 33 (expression -> NUMBER .)
    LE              reduce using rule 33 (expression -> NUMBER .)
    GT              reduce using rule 33 (expression -> NUMBER .)
    GE              reduce using rule 33 (expression -> NUMBER .)
    AND             reduce using rule 33 (expression -> NUMBER .)
    OR              reduce using rule 33 (expression -> NUMBER .)
    RPAREN          reduce using rule 33 (expression -> NUMBER .)
    COMMA           reduce using rule 33 (expression -> NUMBER .)


state 37

    (34) expression -> IDENTIFIER .
    (36) function_call_expr -> IDENTIFIER . LPAREN arguments RPAREN

    SEMICOLON       reduce using rule 34 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 34 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 34 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 34 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 34 (expression -> IDENTIFIER .)
    EQ              reduce using rule 34 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 34 (expression -> IDENTIFIER .)
    LT              reduce using rule 34 (expression -> IDENTIFIER .)
    LE              reduce using rule 34 (expression -> IDENTIFIER .)
    GT              reduce using rule 34 (expression -> IDENTIFIER .)
    GE              reduce using rule 34 (expression -> IDENTIFIER .)
    AND             reduce using rule 34 (expression -> IDENTIFIER .)
    OR              reduce using rule 34 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 34 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 34 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 59


state 38

    (35) expression -> function_call_expr .
